--- a/Styles/style.css
+++ b/Styles/style.css
@@ -40,34 +40,39 @@ ul {
 }
 
 /* Mobile View */
-header .menu {
+
+header .navbar-mob .ham-btn {
+  display: flex;
+  justify-content: end;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+header .mobile-view .menu {
   display: none;
 }
 
-header .menu.show {
+header .mobile-view .menu.show {
   display: block;
   z-index: 5;
   position: absolute;
-  width: 88%;
-  top: 50px;
-  left: 10px;
+  width: 100%;
+  top: 100px;
+  left: 1px;
   background-color: white;
   color: black;
-  border-radius: 15px;
 }
 
-.menu ul {
+.menu ul li {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.menu ul li a {
+  display: block;
   padding: 10px 20px;
 }
 
-.menu ul li a {
-  display: block;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 10px 0;
-}
-
 .menu ul li:last-child {
-  padding-top: 20px;
+  padding: 8px;
 }
 
 .menu ul li a:hover {
@@ -236,23 +241,86 @@ header .menu.show {
   text-decoration: underline;
 }
 
-.tab-bar {
+.general-view .tab-bar {
   border-bottom: 1px solid rgb(196, 194, 194);
 }
 
-.tab-bar ul {
+.general-view .tab-bar ul {
   display: flex;
   padding: 10px 0 15px 0;
 }
 
-.tab-bar ul a {
+.general-view .tab-bar ul a {
   font-size: 14px;
   margin-right: 30px;
   font-weight: 600;
 }
 
-/* Foods Section */
+/* Mobile View Tab bar */
+.mobile-view .tab-bar .flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
 
+.mobile-view .tab-bar .more-tab i {
+  padding-left: 0px;
+}
+
+.mobile-view .tab-bar .more-tab {
+  cursor: pointer;
+  letter-spacing: 3.5px;
+}
+
+.mobile-view .tab-bar {
+  display: none;
+}
+
+.mobile-view .tab-bar.show {
+  display: block;
+}
+
+.mobile-view .other-tabs {
+  display: none;
+}
+
+.mobile-view .wrapper-all {
+  position: relative;
+}
+
+.mobile-view .other-tabs.show {
+  border-radius: 10px;
+  display: block;
+  background-color: rgb(253, 251, 251);
+  width: 180px;
+  position: absolute;
+  z-index: 8;
+  top: 40px;
+  right: 10px;
+}
+
+.mobile-view .other-tabs ul {
+  padding: 0px 20px;
+}
+
+.mobile-view .other-tabs ul li {
+  padding: 10px 0;
+}
+
+.tab-bar .food-tab ul {
+  display: flex;
+  padding: 10px 0 15px 0;
+  font-size: 14px;
+}
+
+.mobile-view .tab-bar ul a {
+  font-size: 20px;
+  margin-right: 30px;
+  font-weight: bolder;
+}
+
+/* Foods Section */
 .food-name .food-heading {
   margin: 40px 0;
 }
@@ -278,6 +346,9 @@ header .menu.show {
   position: absolute;
   bottom: 15px;
   right: 15px;
+}
+.card-group .card .icon:hover {
+  cursor: pointer;
 }
 
 .card-group .card h4 {
@@ -323,11 +394,6 @@ header .menu.show {
   grid-gap: 13px;
 }
 
-/* .card-group .card img {
-  max-width: 640px;
-  max-height: 50px;
-} */
-
 .card .food-price {
   padding-right: 15px;
 }
@@ -347,7 +413,6 @@ header .menu.show {
 
 .footer .copy-pow {
   border-top: 1px solid gray;
-  /* margin: 75px 0; */
 }
 
 .footer .copy-pow-sect {
@@ -432,6 +497,12 @@ footer .clone {
 }
 
 /* Responsiveness */
+@media (max-width: 1450px) {
+  .mobile-view {
+    display: none;
+  }
+}
+
 @media (max-width: 1450px) {
   .container {
     max-width: 950px;
@@ -602,7 +673,7 @@ footer .clone {
     width: 650px;
   }
 
-  .tab-bar ul a {
+  .general-view .tab-bar ul a {
     font-size: 12px;
     margin-right: 25px;
     font-weight: 600;
@@ -634,7 +705,7 @@ footer .clone {
     font-size: 3.3rem;
   }
 
-  .tab-bar ul a {
+  .general-view .tab-bar ul a {
     font-size: 11px;
     margin-right: 20px;
     font-weight: 600;
@@ -667,8 +738,16 @@ footer .clone {
     font-size: 3rem;
   }
 
-  .tab-bar ul {
+  .general-view .tab-bar ul {
     display: none;
+  }
+
+  .mobile-view .tab-bar {
+    display: block;
+  }
+
+  :is(.header, .bg-img) {
+    height: 85vh;
   }
 
   .food-name .card-group .title-price-flex {
@@ -686,6 +765,10 @@ footer .clone {
     font-size: 2.5rem;
   }
 
+  :is(.header, .bg-img) {
+    height: 78vh;
+  }
+
   .food-name .card-group .title-price-flex {
     width: 400px;
   }
@@ -701,6 +784,10 @@ footer .clone {
     font-size: 1.7rem;
   }
 
+  .next .nav-down {
+    margin-top: 20px;
+  }
+
   footer .container {
     max-width: 320px;
   }
@@ -714,10 +801,6 @@ footer .clone {
 
   .ham-btn {
     margin-bottom: 10px;
-  }
-
-  :is(.header, .bg-img) {
-    height: 78vh;
   }
 
   .food-name .card-group .title-price-flex {
@@ -752,5 +835,34 @@ footer .clone {
 
   footer .container {
     max-width: 300px;
+  }
+}
+
+@media (max-width: 347px) {
+  .container {
+    max-width: 320px;
+    margin: auto;
+  }
+}
+@media (max-width: 325px) {
+  .container {
+    max-width: 290px;
+    margin: auto;
+  }
+}
+@media (max-width: 290px) {
+  .container {
+    max-width: 260px;
+    margin: auto;
+  }
+}
+
+@media (min-width: 1030px) {
+  .next .nav-middle {
+    margin: 120px;
+  }
+
+  .mobile-view {
+    display: none;
   }
 }
