--- a/Styles/style.css
+++ b/Styles/style.css
@@ -63,6 +63,11 @@ header .mobile-view .menu.show {
   color: black;
 }
 
+.menu ul li a {
+  transition-property: font-weight, transform;
+  transition: 1.5s;
+}
+
 .menu ul li {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
@@ -77,7 +82,7 @@ header .mobile-view .menu.show {
 
 .menu ul li a:hover {
   font-weight: bold;
-  transition: 2s;
+  transform: scaleX(0.95);
 }
 
 /* Background Section */
